login, authorization and authentication finish