@@ -14,79 +14,123 @@ import com.veterinaria.veterinaria_comoreyes.service.IAuthService;
 import com.veterinaria.veterinaria_comoreyes.service.IEmployeeService;
 import com.veterinaria.veterinaria_comoreyes.util.JwtTokenUtil;
 import com.veterinaria.veterinaria_comoreyes.util.PasswordUtil;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
 
 @Service
 public class AuthServiceImpl implements IAuthService {
+
     private final UserRepository userRepository;
     private final EmployeeRepository employeeRepository;
     private final ClientRepository clientRepository;
-    private final JwtTokenUtil jwtTokenUtil;
     private final PasswordUtil passwordUtil;
-    private final IEmployeeService employeeService;
+    private final JwtTokenUtil jwtTokenUtil;
+    private final EmployeeServiceImpl employeeService;
 
-    public AuthServiceImpl(UserRepository userRepository, EmployeeRepository employeeRepository,
-                           ClientRepository clientRepository, JwtTokenUtil jwtTokenUtil,
-                           PasswordUtil passwordUtil,IEmployeeService employeeService) {
+    @Autowired
+    public AuthServiceImpl(
+            UserRepository userRepository,
+            EmployeeRepository employeeRepository,
+            ClientRepository clientRepository,
+            PasswordUtil passwordUtil,
+            JwtTokenUtil jwtTokenUtil,
+            EmployeeServiceImpl employeeService) {
         this.userRepository = userRepository;
         this.employeeRepository = employeeRepository;
         this.clientRepository = clientRepository;
-        this.jwtTokenUtil = jwtTokenUtil;
         this.passwordUtil = passwordUtil;
+        this.jwtTokenUtil = jwtTokenUtil;
         this.employeeService = employeeService;
     }
 
     @Override
     public LoginResponseDTO authenticateEmployee(LoginRequestDTO loginRequest) {
+        // 1. Buscar usuario por email
         User user = userRepository.findByEmail(loginRequest.email())
                 .orElseThrow(() -> new AuthException("Credenciales inválidas", ErrorCodes.INVALID_CREDENTIALS.getCode()));
 
+        // 2. Validar contraseña
         if (!passwordUtil.matches(loginRequest.password(), user.getPassword())) {
             throw new AuthException("Credenciales inválidas", ErrorCodes.INVALID_CREDENTIALS.getCode());
         }
 
-        if (user.getStatus().equals(Boolean.FALSE)) {
-            throw new AuthException("Cuenta Bloqueada", ErrorCodes.ACCOUNT_DISABLED.getCode());
+        // 3. Verificar si la cuenta está activa
+        if (!user.getStatus()) {
+            throw new AuthException("Cuenta desactivada", ErrorCodes.ACCOUNT_DISABLED.getCode());
         }
 
-        if (!user.getType().equals("E")) {
+        // 4. Verificar tipo de usuario
+        if (!"E".equals(user.getType())) {
             throw new AuthException("Acceso restringido a empleados", ErrorCodes.INVALID_CREDENTIALS.getCode());
         }
 
+        // 5. Obtener datos del empleado
         Employee employee = employeeRepository.findByUser(user)
                 .orElseThrow(() -> new AuthException("Empleado no encontrado", ErrorCodes.USER_NOT_FOUND.getCode()));
 
-
+        // 6. Obtener permisos del empleado
         Set<String> permissions = new HashSet<>(employeeService.getEmployeePermissions(employee.getEmployeeId()));
 
-        String token = jwtTokenUtil.generateToken(user.getUserId(), employee.getEmployeeId(), "E", new ArrayList<>(permissions));
+        // 7. Generar token JWT
+        String token = jwtTokenUtil.generateToken(
+                user.getUserId(),
+                employee.getEmployeeId(),
+                "E",
+                new ArrayList<>(permissions)
+        );
 
-        return new LoginResponseDTO(token, user.getUserId(), employee.getEmployeeId(), "E", permissions);
+        // 8. Retornar respuesta con token y datos
+        return new LoginResponseDTO(
+                token,
+                user.getUserId(),
+                employee.getEmployeeId(),
+                "E",
+                permissions
+        );
     }
 
     @Override
     public LoginResponseDTO authenticateClient(LoginRequestDTO loginRequest) {
+        // 1. Buscar usuario por email
         User user = userRepository.findByEmail(loginRequest.email())
                 .orElseThrow(() -> new AuthException("Credenciales inválidas", ErrorCodes.INVALID_CREDENTIALS.getCode()));
 
+        // 2. Validar contraseña
         if (!passwordUtil.matches(loginRequest.password(), user.getPassword())) {
             throw new AuthException("Credenciales inválidas", ErrorCodes.INVALID_CREDENTIALS.getCode());
         }
 
-        if (user.getStatus().equals(Boolean.FALSE)) {
-            throw new AuthException("Cuenta Bloqueada", ErrorCodes.ACCOUNT_DISABLED.getCode());
+        // 3. Verificar si la cuenta está activa
+        if (!user.getStatus()) {
+            throw new AuthException("Cuenta desactivada", ErrorCodes.ACCOUNT_DISABLED.getCode());
         }
 
-        if (!user.getType().equals("C")) {
+        // 4. Verificar tipo de usuario
+        if (!"C".equals(user.getType())) {
             throw new AuthException("Acceso restringido a clientes", ErrorCodes.INVALID_CREDENTIALS.getCode());
         }
 
+        // 5. Obtener datos del cliente
         Client client = clientRepository.findByUser(user);
 
-        String token = jwtTokenUtil.generateToken(user.getUserId(), client.getClientId(), "C", List.of());
+        // 6. Generar token JWT (clientes no tienen permisos)
+        String token = jwtTokenUtil.generateToken(
+                user.getUserId(),
+                client.getClientId(),
+                "C",
+                Collections.emptyList()
+        );
 
-        return new LoginResponseDTO(token, user.getUserId(), client.getClientId(), "C", Collections.emptySet());
+        // 7. Retornar respuesta con token y datos
+        return new LoginResponseDTO(
+                token,
+                user.getUserId(),
+                client.getClientId(),
+                "C",
+                Collections.emptySet()
+        );
     }
 }
